# recipe-service

./: .env.example  pyproject.toml
.github/workflows/: main.yml
recipe/: cli.py  main.py  routers.py  settings.py
recipes/: cli.py  main.py  settings.py
recipes/routers/: __init__.py
recipes/routers/recipes/: api.py  models.py
tests/: test_main.py
