[tool.poetry]
name = "recipes"
version = "0.0.0"
description = ""
authors = ["Wojciech Richert <33549959+wojtekrichert@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "==3.11.5"
typer = "==0.12.1"
pydantic = "==2.6.4"
fastapi = "==0.110.1"
uvicorn = "==0.29.0"
python-dotenv = "==1.0.1"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli = "recipes.cli:main"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"
