[tool.poetry]
name = "recipes"
version = "0.0.0"
description = ""
authors = ["Wojciech Richert <33549959+wojtekrichert@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "==3.11.5"
typer = "==0.12.1"
pydantic = "==2.6.4"
fastapi = "==0.110.1"
uvicorn = "==0.29.0"
python-dotenv = "==1.0.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
ruff = "==0.3.5"
pytest = "==8.1.1"

[tool.poetry.scripts]
cli = "recipes.cli:main"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8
    "RSE", "TCH", "ARG", "LOG",
    # isort
    "I",
    # pydocstyle
    "D",
    # pylint
    "PL",
    # pep8
    "N",
]
ignore = [
    "E501", "D400", "D415", "D202", "D203", "D212", "D401", "D104", "D205", "D404", "D402", "N805", "D200",
    "PLR0913", "N818", "PLR2004", "N806", "PLW2901", "D301", "RSE102"
]

[tool.ruff]
line-length = 90

[tool.ruff.lint.isort]
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "recipes", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"recipes" = ["recipes"]


